# spesto

./: .gitignore  README.md
apps/api/: README.md
apps/web/: README.md
infra/terraform/: README.md
jobs/: README.md
jobs/ingest_kolkostruva/: .dockerignore  README.md  main.py  pyproject.toml
jobs/load_to_bigquery/: Dockerfile  README.md  main.py  pyproject.toml
jobs/match_products/: README.md  pyproject.toml  spike_category_11.py  spike_category_6.py
jobs/transform/: Dockerfile  README.md  main.py  pyproject.toml
jobs/transform/sql/: price_observations.sql
scripts/: README.md  backfill.py
sql/: README.md
sql/staged/dims/: README.md  category_dim.csv  ekatte_dim.csv  retailer_dim.csv  settlement_overrides.csv
