[project]
name = "spesto-match-products"
version = "0.1.0"
description = "Product attribute extraction + cross-retailer match-group formation via Claude."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.52",
    "google-cloud-bigquery>=3.25",
    "pydantic>=2.8",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
