[project]
name = "spesto-transform"
version = "0.1.0"
description = "Build staged.price_observations from landed_raw for a given date; (re)load dim tables from GCS."
requires-python = ">=3.12"
dependencies = [
    "google-cloud-bigquery>=3.25",
    "google-cloud-storage>=2.18",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
